<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lobby_bg_vertical"
    tools:ignore="SpUsage,ContentDescription"
    tools:context=".LobbyActivity">

    <ImageView
        android:id="@+id/lobby_top_img"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/casino_topbg" />

    <ImageView
        android:id="@+id/lobby_logo"
        android:layout_width="160dp"
        android:layout_height="55dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/casino_logo" />

    <TextView
        android:id="@+id/mem_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/member"
        android:textColor="#edc57f"
        android:textSize="8dp"
        app:layout_constraintEnd_toStartOf="@+id/lobby_logo"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="@+id/lobby_top_img"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/member_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/default_member"
        android:textColor="#fff"
        android:textSize="13dp"
        app:layout_constraintEnd_toStartOf="@+id/lobby_logo"
        app:layout_constraintStart_toStartOf="@+id/mem_txt"
        app:layout_constraintTop_toBottomOf="@+id/mem_txt" />

    <ImageView
        android:id="@+id/service_icon"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="9dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="@+id/lobby_top_img"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toEndOf="@+id/lobby_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lobby_iconserve" />

    <ImageView
        android:id="@+id/setting_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="6dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="@+id/lobby_top_img"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/service_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lobby_btnsetting" />

    <tw.com.atromoby.widgets.ItemsView
        android:id="@+id/itemsView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        app:direction="vertical"
        app:layout_constraintBottom_toTopOf="@+id/view12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lobby_logo" />

    <View
        android:id="@+id/view12"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/lobby_bt_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/log_icon1_img"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/login_icon1" />

    <TextView
        android:id="@+id/u_online_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="12dp"
        android:text="@string/user_online"
        android:textColor="#edc57f"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/log_icon1_img" />

    <TextView
        android:id="@+id/user_online_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="12dp"
        android:text="@string/default_num"
        android:textColor="#fff"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/u_online_txt" />

    <ImageView
        android:id="@+id/log_icon2_img"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.61"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/login_icon2" />

    <TextView
        android:id="@+id/ta_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="12dp"
        android:text="@string/tables"
        android:textColor="#edc57f"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/log_icon2_img" />

    <TextView
        android:id="@+id/table_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="12dp"
        android:text="@string/default_num"
        android:textColor="#fff"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ta_txt" />

</android.support.constraint.ConstraintLayout>